// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cell should not render text if hide property is given 1`] = `
.c2 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
}

.c0 {
  opacity: 0;
  padding: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  overflow: hidden;
  border-right: 1px solid #C7D0D8;
}

.c0 .sc-AxheI {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0;
}

.c0 .sc-AxheI .sc-AxjAm {
  margin-right: 0;
}

.c0 .c1 {
  white-space: nowrap;
}

<div>
  <div
    class="c0"
  >
    <span
      class="c1 c2"
    >
      Dummy
    </span>
  </div>
</div>
`;

exports[`Cell should render checkbox properly 1`] = `
.c10 {
  overflow: visible;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  font-size: 2.4rem;
  cursor: pointer;
}

.c10 * {
  fill-opacity: 1;
  fill: #607890;
}

.c4 {
  color: #435465;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  margin: 0px 0px 0px 2.0rem;
  cursor: pointer;
}

.c5 {
  grid-area: label;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c2 {
  margin: 0.8rem 0.8rem 0.8rem 0;
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-columns: max-content minmax(max-content,25%);
  grid-template-areas: 'field label' 'description random';
}

.c2 .sc-AxhCb {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c7 {
  position: relative;
  width: 18px;
  height: 18px;
  border-radius: 15%;
  border: 1px solid #13181D;
  background-color: #ffffff;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 .c9 * {
  fill: #13181D;
}

.c7:hover {
  border: 1px solid #1A6BF0;
  background-color: #ffffff;
}

.c3 label {
  color: #13181D;
}

.c3:hover .c6 {
  border: 1px solid #1A6BF0;
}

.c8 {
  opacity: 0;
  z-index: 100;
  width: 100%;
  height: 100%;
  position: absolute;
  margin: 0;
  cursor: pointer;
}

.c8 + .c9 {
  z-index: 1;
  position: absolute;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  -webkit-transition: -webkit-transform 0.2s ease-in-out;
  -webkit-transition: transform 0.2s ease-in-out;
  transition: transform 0.2s ease-in-out;
}

.c8:focus {
  outline: none;
}

.c8:checked + .c9 {
  -webkit-transform: scale(0.7);
  -ms-transform: scale(0.7);
  transform: scale(0.7);
}

.c0 {
  opacity: 0;
  padding: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  overflow: hidden;
  border-right: 1px solid #C7D0D8;
}

.c0 .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0;
}

.c0 .c1 .c9 {
  margin-right: 0;
}

.c0 .sc-AxiKw {
  white-space: nowrap;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1 c2 c3"
      id="Dummy-checkbox"
    >
      <label
        class="c4 c5"
        for="Dummy"
      >
        Dummy
      </label>
      <div
        class="c6 c7"
        data-testid="checkbox-wrapper"
      >
        <input
          class="c8"
          id="Dummy"
          type="checkbox"
        />
        <svg
          class="c9 c10"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.795 15.875l-3.47-3.47a.996.996 0 1 0-1.41 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
            fill="#000"
            fill-opacity=".54"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Cell should render frozen text properly 1`] = `
.c2 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
}

.c0 {
  opacity: 1;
  padding: 5px 10px;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  overflow: hidden;
  border-right: 1px solid #C7D0D8;
  position: -webkit-sticky;
  position: sticky;
  left: 0;
  z-index: 2;
  background-color: inherit;
}

.c0 .sc-AxheI {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0;
}

.c0 .sc-AxheI .sc-AxjAm {
  margin-right: 0;
}

.c0 .c1 {
  white-space: nowrap;
}

.c0 * {
  z-index: 2;
}

<div>
  <div
    class="c0"
  >
    <span
      class="c1 c2"
    >
      Dummy
    </span>
  </div>
</div>
`;

exports[`Cell should render text properly 1`] = `
.c2 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
}

.c0 {
  opacity: 1;
  padding: 5px 10px;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  overflow: hidden;
  border-right: 1px solid #C7D0D8;
}

.c0 .sc-AxheI {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0;
}

.c0 .sc-AxheI .sc-AxjAm {
  margin-right: 0;
}

.c0 .c1 {
  white-space: nowrap;
}

<div>
  <div
    class="c0"
  >
    <span
      class="c1 c2"
    >
      Dummy
    </span>
  </div>
</div>
`;
